<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">


    <TextView
        android:id="@+id/security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/dimen_24_sp"
        android:layout_margin="@dimen/dimen_16"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        app:cardElevation="@dimen/dimen_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180"
        android:layout_margin="@dimen/dimen_16"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@+id/security" />

    <TextView
        android:id="@+id/text_SOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:text="@string/sos"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <TextView
        android:id="@+id/SOS_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_SOS"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintEnd_toStartOf="@id/sos_image"/>

    <ImageView
        android:id="@+id/sos_image"
        android:src="@drawable/ic_sos"
        android:layout_width="@dimen/dimen_112"
        android:layout_height="@dimen/dimen_112"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        app:cardElevation="@dimen/dimen_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180"
        android:layout_margin="@dimen/dimen_16"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@+id/pink_card" />

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:text="@string/guard"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card" />

    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:text="@string/open_when_you_are_on_potentially_dangerous_journey"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_guard"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintEnd_toStartOf="@id/guard_image"/>

    <ImageView
        android:id="@+id/guard_image"
        android:src="@drawable/ic_guard"
        android:layout_width="@dimen/dimen_112"
        android:layout_height="@dimen/dimen_112"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintBottom_toBottomOf="@id/green_card"/>


</androidx.constraintlayout.widget.ConstraintLayout>